# TogetherThroughTimeAndSpace

togethereverything/: next.config.mjs  package.json  pnpm-lock.yaml
togethereverything/app/: greet.tsx  page.tsx  show.tsx
togethereverything/app/db/: dbop.ts
togethereverything/src-tauri/: Cargo.toml  tauri.conf.json
togethereverything/src-tauri/src/: lib.rs
togethereverywhere/: package.json  pnpm-lock.yaml
togethereverywhere/src-tauri/: Cargo.toml  tauri.conf.json
togethereverywhere/src-tauri/src/: main.rs
togethereverywhere_tauriv1/: package.json  pnpm-lock.yaml  tsconfig.json
togethereverywhere_tauriv1/app/: greet.tsx  page.tsx
togethereverywhere_tauriv1/src-tauri/: Cargo.toml  tauri.conf.json
togethereverywhere_tauriv1/src-tauri/src/: main.rs
